--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141678413-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141678413-1');
+</script>
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>Soham De</title>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
