added new paper

--- a/index.html
+++ b/index.html
@@ -75,16 +75,14 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 	<a href="https://arxiv.org/pdf/1904.06963.pdf" target="_blank">paper</a> /
 	<a href="javascript:unhide('gc19bib');">bibtex</a> /
 	<a href="javascript:unhide('gc19tldr');">tl;dr</a>
-	<div id="gc19bib" class="hidden"><br/>
-	<pre>
-@article{sankararaman2019impact,
-  title={The Impact of Neural Network Overparameterization on Gradient Confusion and Stochastic Gradient Descent},
-  author={Sankararaman, Karthik A and De, Soham and Xu, Zheng and Huang, W Ronny and Goldstein, Tom},
-  journal={arXiv preprint arXiv:1904.06963},
-  year={2019}
-}
-	</pre>
-	</div>
+	<div id="gc19bib" class="hidden"><div class="bibstyle"><br/>
+@article{sankararaman2019impact, <br/>
+  title={The Impact of Neural Network Overparameterization on Gradient Confusion and Stochastic Gradient Descent}, <br/>
+  author={Sankararaman, Karthik A and De, Soham and Xu, Zheng and Huang, W Ronny and Goldstein, Tom}, <br/>
+  journal={arXiv preprint arXiv:1904.06963}, <br/>
+  year={2019} <br/>
+} <br/>
+	</div></div>
 	<div id="gc19tldr" class="hidden"><br/>
 We analyze how neural network structure affects SGD convergence. Increased layer width decreases the variance of the stochastic gradients, improving SGD convergence. Increased network depth, on the other hand, increases the variance slowing down SGD. BatchNorm and skip connections helps reduce this training burden of very deep networks.
 	</div>
@@ -92,6 +90,31 @@ We analyze how neural network structure affects SGD convergence. Increased layer
 	</td>
 </tr>
 
+<tr>
+	<td width="20%" valign="top">
+	<img class="pubimage" src="./pubimages/llr.png">
+	</td>
+	<td width="80%" valign="top" class="text">
+	<span class="title">Adversarial Robustness through Local Linearization</span><br/> 
+	Chongli Qin, James Martens, Sven Gowal, Dilip Krishnan, Alhussein Fawzi, <b>Soham De</b>, Robert Stanforth, Pushmeet Kohli<br/>
+	Preprint<br/>
+	<a href="https://arxiv.org/pdf/1907.02610.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('llr19bib');">bibtex</a> /
+	<a href="javascript:unhide('llr19tldr');">tl;dr</a>
+	<div id="llr19bib" class="hidden"><div class="bibstyle"><br/>
+@article{qin2019adversarial, <br/>
+  title={Adversarial Robustness through Local Linearization}, <br/>
+  author={Qin, Chongli and Martens, James and Gowal, Sven and Krishnan, Dilip and Fawzi, Alhussein and De, Soham and Stanforth, Robert and Kohli, Pushmeet}, <br/>
+  journal={arXiv preprint arXiv:1907.02610}, <br/>
+  year={2019} <br/>
+} <br/>
+	</div></div>
+	<div id="llr19tldr" class="hidden"><br/>
+Adversarial training is an effective but computationally costly method for training neural nets that are robust against adversarial perturbations. We introduce a regularizer that achieves state-of-the-art adversarial accuracy results on CIFAR-10 and ImageNet classifiers, while being significantly faster than adversarial training.
+	</div>
+	<br/><br/>
+	</td>
+</tr>
 
 <tr>
 	<td width="20%" valign="top">
@@ -106,17 +129,15 @@ We analyze how neural network structure affects SGD convergence. Increased layer
 	<a href="docs/nips17_poster.pdf" target="_blank">poster</a> /
 	<a href="javascript:unhide('nips17bib');">bibtex</a> /
 	<a href="javascript:unhide('nips17tldr');">tl;dr</a>
-	<div id="nips17bib" class="hidden"><br/>
-	<pre>
-@inproceedings{li2017training,
-  title={Training quantized nets: A deeper understanding},
-  author={Li, Hao and De, Soham and Xu, Zheng and Studer, Christoph and Samet, Hanan and Goldstein, Tom},
-  booktitle={Advances in Neural Information Processing Systems},
-  pages={5811--5821},
-  year={2017}
-}
-	</pre>
-	</div>
+	<div id="nips17bib" class="hidden"><div class="bibstyle"><br/>
+@inproceedings{li2017training, <br/>
+  title={Training quantized nets: A deeper understanding}, <br/>
+  author={Li, Hao and De, Soham and Xu, Zheng and Studer, Christoph and Samet, Hanan and Goldstein, Tom}, <br/>
+  booktitle={Advances in Neural Information Processing Systems}, <br/>
+  pages={5811--5821}, <br/>
+  year={2017} <br/>
+} <br/>
+	</div></div>
 	<div id="nips17tldr" class="hidden"><br/>
 Neural net parameters can often be compressed down to just one single bit without a significant loss in network performance, yielding a huge reduction in model size and computational workload. We develop a theory of quantized nets, and explain the performance of algorithms for weight quantization.
 	</div>
@@ -137,17 +158,15 @@ Neural net parameters can often be compressed down to just one single bit withou
 	<a href="docs/aistats17_slides.pdf" target="_blank">slides</a> /
 	<a href="javascript:unhide('aistats17bib');">bibtex</a> /
 	<a href="javascript:unhide('aistats17tldr');">tl;dr</a>
-	<div id="aistats17bib" class="hidden"><br/>
-	<pre>
-@inproceedings{de2017automated,
-  title={Automated inference with adaptive batches},
-  author={De, Soham and Yadav, Abhay and Jacobs, David and Goldstein, Tom},
-  booktitle={Artificial Intelligence and Statistics},
-  pages={1504--1513},
-  year={2017}
-}
-	</pre>
-	</div>
+	<div id="aistats17bib" class="hidden"><div class="bibstyle"><br/>
+@inproceedings{de2017automated, <br/>
+  title={Automated inference with adaptive batches}, <br/>
+  author={De, Soham and Yadav, Abhay and Jacobs, David and Goldstein, Tom}, <br/>
+  booktitle={Artificial Intelligence and Statistics}, <br/>
+  pages={1504--1513}, <br/>
+  year={2017} <br/>
+} <br/>
+	</div></div>
 	<div id="aistats17tldr" class="hidden"><br/>
 We propose Big Batch SGD for automatically growing batch sizes by controlling the signal-to-noise ratio during SGD training. We show that the large batches used can generalize as well as small batches, and allows for SGD to be fully automated using adaptive step size methods.
 	</div>
@@ -168,18 +187,16 @@ We propose Big Batch SGD for automatically growing batch sizes by controlling th
 	<a href="docs/aamas17_slides.pdf" target="_blank">slides</a> /
 	<a href="javascript:unhide('aamas17bib');">bibtex</a> /
 	<a href="javascript:unhide('aamas17tldr');">tl;dr</a>
-	<div id="aamas17bib" class="hidden"><br/>
-	<pre>
-@inproceedings{de2017understanding,
-  title={Understanding norm change: An evolutionary game-theoretic approach},
-  author={De, Soham and Nau, Dana S and Gelfand, Michele J},
-  booktitle={Proceedings of the 16th Conference on Autonomous Agents and MultiAgent Systems},
-  pages={1433--1441},
-  year={2017},
-  organization={International Foundation for Autonomous Agents and Multiagent Systems}
-}
-	</pre>
-	</div>
+	<div id="aamas17bib" class="hidden"><div class="bibstyle"><br/>
+@inproceedings{de2017understanding, <br/>
+  title={Understanding norm change: An evolutionary game-theoretic approach}, <br/>
+  author={De, Soham and Nau, Dana S and Gelfand, Michele J}, <br/>
+  booktitle={Proceedings of the 16th Conference on Autonomous Agents and MultiAgent Systems}, <br/>
+  pages={1433--1441}, <br/>
+  year={2017}, <br/>
+  organization={International Foundation for Autonomous Agents and Multiagent Systems} <br/>
+} <br/>
+	</div></div>
 	<div id="aamas17tldr" class="hidden"><br/>
 Human societies around the world interact with each other by developing and maintaining social norms. Using an evolutionary game theoretic model, we study how norms change in a society, based on the idea that different strength of norms in societies translate to different game-theoretic interaction structures and incentives.
 	</div>
@@ -200,18 +217,16 @@ Human societies around the world interact with each other by developing and main
 	<a href="docs/icdm16_slides.pdf" target="_blank">slides</a> /
 	<a href="javascript:unhide('icdm16bib');">bibtex</a> /
 	<a href="javascript:unhide('icdm16tldr');">tl;dr</a>
-	<div id="icdm16bib" class="hidden"><br/>
-	<pre>
-@inproceedings{de2016efficient,
-  title={Efficient distributed SGD with variance reduction},
-  author={De, Soham and Goldstein, Tom},
-  booktitle={2016 IEEE 16th International Conference on Data Mining (ICDM)},
-  pages={111--120},
-  year={2016},
-  organization={IEEE}
-}
-	</pre>
-	</div>
+	<div id="icdm16bib" class="hidden"><div class="bibstyle"><br/>
+@inproceedings{de2016efficient, <br/>
+  title={Efficient distributed SGD with variance reduction}, <br/>
+  author={De, Soham and Goldstein, Tom}, <br/>
+  booktitle={2016 IEEE 16th International Conference on Data Mining (ICDM)}, <br/>
+  pages={111--120}, <br/>
+  year={2016}, <br/>
+  organization={IEEE} <br/>
+} <br/>
+	</div></div>
 	<div id="icdm16tldr" class="hidden"><br/>
 We propose an optimization algorithm called CentralVR that reduces the variance of SGD gradients and scales linearly up to hundreds of distributed computing nodes. 
 	</div>
@@ -232,19 +247,17 @@ We propose an optimization algorithm called CentralVR that reduces the variance 
 	<a href="https://cmns.umd.edu/news-events/features/3350" target="_blank">press</a> /
 	<a href="javascript:unhide('scirep15bib');">bibtex</a> /
 	<a href="javascript:unhide('scirep15tldr');">tl;dr</a>
-	<div id="scirep15bib" class="hidden"><br/>
-	<pre>
-@article{de2015inevitability,
-  title={The inevitability of ethnocentrism revisited: Ethnocentrism diminishes as mobility increases},
-  author={De, Soham and Gelfand, Michele J and Nau, Dana and Roos, Patrick},
-  journal={Scientific reports},
-  volume={5},
-  pages={17963},
-  year={2015},
-  publisher={Nature Publishing Group}
-}
-	</pre>
-	</div>
+	<div id="scirep15bib" class="hidden"><div class="bibstyle"><br/>
+@article{de2015inevitability, <br/>
+  title={The inevitability of ethnocentrism revisited: Ethnocentrism diminishes as mobility increases}, <br/>
+  author={De, Soham and Gelfand, Michele J and Nau, Dana and Roos, Patrick}, <br/>
+  journal={Scientific reports}, <br/>
+  volume={5}, <br/>
+  pages={17963}, <br/>
+  year={2015}, <br/>
+  publisher={Nature Publishing Group} <br/>
+} <br/>
+	</div></div>
 	<div id="scirep15tldr" class="hidden"><br/>
 Advances over the centuries have greatly increased the degree to which humans change physical locations. Using an evolutionary game theoretical model and archival data, we show that in highly mobile societies, one’s choice of action is more likely to depend on what individual one is interacting with, rather than the group to which the individual belongs.
 	</div>
@@ -256,7 +269,7 @@ Advances over the centuries have greatly increased the degree to which humans ch
 </table>
 
 <hr/>
-Last Updated: June 6, 2019
+Last Updated: July 20, 2019
 
 </body>
 </html>
