--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ We analyze how neural network structure affects SGD convergence. Increased layer
 	<td width="80%" valign="top" class="text">
 	<span class="title">Adversarial Robustness through Local Linearization</span><br/> 
 	Chongli Qin, James Martens, Sven Gowal, Dilip Krishnan, Alhussein Fawzi, <b>Soham De</b>, Robert Stanforth, Pushmeet Kohli<br/>
-	Preprint<br/>
+	NeurIPS 2019<br/>
 	<a href="https://arxiv.org/pdf/1907.02610.pdf" target="_blank">paper</a> /
 	<a href="javascript:unhide('llr19bib');">bibtex</a> /
 	<a href="javascript:unhide('llr19tldr');">tl;dr</a>
@@ -269,7 +269,7 @@ Advances over the centuries have greatly increased the degree to which humans ch
 </table>
 
 <hr/>
-Last Updated: July 20, 2019
+Last Updated: September 5, 2019
 
 </body>
 </html>
