updated publication list

--- a/index.html
+++ b/index.html
@@ -63,7 +63,34 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
 <tbody>
 
-
+	
+<tr>
+	<td width="20%" valign="top">
+	<img class="pubimage" src="./pubimages/skipInit.png">
+	</td>
+	<td width="80%" valign="top" class="text">
+	<span class="title">Batch Normalization Biases Deep Residual Networks Towards Shallow Paths</span><br/> 
+	<b>Soham De*</b>, Sam Smith<br/>
+	Preprint<br/>
+	<a href="https://arxiv.org/pdf/2002.10444.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('bn20bib');">bibtex</a> /
+	<a href="javascript:unhide('bn20tldr');">tl;dr</a>
+	<div id="bn20bib" class="hidden"><div class="bibstyle"><br/>
+@article{de2020batch, <br/>
+  title={Batch Normalization Biases Deep Residual Networks Towards Shallow Paths}, <br/>
+  author={De, Soham and Smith, Samuel L}, <br/>
+  journal={arXiv preprint arXiv:2002.10444}, <br/>
+  year={2020} <br/>
+} <br/>
+	</div></div>
+	<div id="bn20tldr" class="hidden"><br/>
+We show that batch normalisation biases deep residual networks towards shallow paths with well-behaved gradients. This dramatically increases the largest trainable depth. We can recover this benefit with a simple change to the initialisation scheme.
+	</div>
+	<br/><br/>
+	</td>
+</tr>
+	
+	
 <tr>
 	<td width="20%" valign="top">
 	<img class="pubimage" src="./pubimages/gradconf.png">
@@ -205,7 +232,7 @@ Human societies around the world interact with each other by developing and main
 </tr>
 
 
-<tr>
+<!-- <tr>
 	<td width="20%" valign="top">
 	<img class="pubimage" src="./pubimages/distributed.png">
 	</td>
@@ -232,7 +259,7 @@ We propose an optimization algorithm called CentralVR that reduces the variance 
 	</div>
 	<br/><br/>
 	</td>
-</tr>
+</tr> -->
 
 
 <tr>
