--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 	</td>
 	<td width="80%" valign="top" class="text">
 	<span class="title">Batch Normalization Biases Deep Residual Networks Towards Shallow Paths</span><br/> 
-	<b>Soham De*</b>, Sam Smith<br/>
+	<b>Soham De</b>, Sam Smith<br/>
 	Preprint<br/>
 	<a href="https://arxiv.org/pdf/2002.10444.pdf" target="_blank">paper</a> /
 	<a href="javascript:unhide('bn20bib');">bibtex</a> /
