--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 } <br/>
 	</div></div>
 	<div id="bn20tldr" class="hidden"><br/>
-We show that batch normalisation biases deep residual networks towards shallow paths with well-behaved gradients. This dramatically increases the largest trainable depth. We can recover this benefit with a simple change to the initialisation scheme.
+We show that batch normalization biases deep residual networks towards shallow paths with well-behaved gradients. This dramatically increases the largest trainable depth. We can recover this benefit with a simple change to the initialization scheme.
 	</div>
 	<br/><br/>
 	</td>
