--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ Research Scientist <br>
 <a target="_blank" href="http://deepmind.com">DeepMind</a><br/>
 London, UK<br/><br/>
 <b>Contact Address:</b><br/>
-6 Pancras Square,<br/>
-London, UK, N1C 4AG<br/><br/>
+R7, 14-18 Handyside St,</br>
+London, UK, N1C 4DN<br/><br/>
 <a target="_blank" href="mailto: sohamde.ml@gmail.com">Email</a> / <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=lHf55pF3KVQC&view_op=list_works">Scholar</a> / <a target="_blank" href="cv.pdf">CV</a><br/>
 
 <br/><br/>
