--- a/index.html
+++ b/index.html
@@ -49,18 +49,154 @@ London, UK, N1C 4DN<br/><br/>
 <a target="_blank" href="mailto: sohamde.ml@gmail.com">Email</a> / <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=lHf55pF3KVQC&view_op=list_works">Scholar</a> / <a target="_blank" href="cv.pdf">CV</a><br/>
 
 <br/><br/>
-I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I study topics in machine learning and optimization. I did my PhD at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>. During my PhD, I studied fast stochastic optimization algorithms for machine learning problems. I also worked on building game-theoretic models of human behavior, where I closely collaborated with <a href="https://www.michelegelfand.com/" target="_blank">Michele Gelfand</a>. I have previously interned at the <a href="https://www.ttic.edu/" target="_blank">Toyota Technological Institute at Chicago (TTIC)</a> and <a href="http://research.ibm.com/labs/almaden/" target="_blank">IBM Research Almaden</a>.
+I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I am currently working on the analysis and understanding of deep neural networks. I completed my PhD in 2018 at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>. During my PhD, I studied fast stochastic optimization algorithms for machine learning problems. I also worked on game-theoretic models of human behavior collaborating with <a href="https://www.michelegelfand.com/" target="_blank">Michele Gelfand</a>. I completed my undergraduate degree from <a href="http://www.jaduniv.edu.in/" target="_blank">Jadavpur University</a>, Kolkata, India in 2013.
 
-<br/><br/>
-
-I am interested broadly in topics in machine learning and optimization. My current focus is in studying optimization and generalization on neural networks. I am also interested in robust and verifiable machine learning models, generative models and game theory.
+<!-- I have previously interned at the <a href="https://www.ttic.edu/" target="_blank">Toyota Technological Institute at Chicago (TTIC)</a> and <a href="http://research.ibm.com/labs/almaden/" target="_blank">IBM Research Almaden</a>. -->
 
 <br/><br/>
 <h3>SELECTED PAPERS</h3>
 Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=lHf55pF3KVQC&view_op=list_works&sortby=pubdate">Google Scholar</a>
 <br/><br/>
 
-<table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+<ul>
+	<li>
+	<span class="title">Batch normalization biases deep residual networks towards shallow paths</span><br/> 
+	<b>Soham De</b>, Sam Smith<br/>
+	Preprint<br/>
+	<a href="https://arxiv.org/pdf/2002.10444.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('bn20bib');">bibtex</a> /
+	<a href="javascript:unhide('bn20tldr');">tl;dr</a>
+	<div id="bn20bib" class="hidden"><div class="bibstyle"><br/>
+@article{de2020batch, <br/>
+  title={Batch Normalization Biases Deep Residual Networks Towards Shallow Paths}, <br/>
+  author={De, Soham and Smith, Samuel L}, <br/>
+  journal={arXiv preprint arXiv:2002.10444}, <br/>
+  year={2020} <br/>
+} <br/>
+	</div></div>
+	<div id="bn20tldr" class="hidden"><br/>
+We show that batch normalization biases deep residual networks towards shallow paths with well-behaved gradients. This dramatically increases the largest trainable depth. We can recover this benefit with a simple change to the initialization scheme.
+	</div>
+	<br/><br/>
+
+	<li>
+	<span class="title">On the generalization benefit of noise in stochastic gradient descent</span><br/> 
+	Samuel L Smith, Erich Elsen, <b>Soham De</b><br/>
+	ICML 2020<br/>
+	paper coming soon
+	<br/><br/>
+
+	<li>
+	<span class="title">The impact of neural network overparameterization on gradient confusion and stochastic gradient descent</span><br/> 
+	Karthik A. Sankararaman*, <b>Soham De*</b>, Zheng Xu, W. Ronny Huang, Tom Goldstein<br/>
+	ICML 2020<br/>
+	<a href="https://arxiv.org/pdf/1904.06963.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('gc19bib');">bibtex</a> /
+	<a href="javascript:unhide('gc19tldr');">tl;dr</a>
+	<div id="gc19bib" class="hidden"><div class="bibstyle"><br/>
+@article{sankararaman2019impact, <br/>
+  title={The Impact of Neural Network Overparameterization on Gradient Confusion and Stochastic Gradient Descent}, <br/>
+  author={Sankararaman, Karthik A and De, Soham and Xu, Zheng and Huang, W Ronny and Goldstein, Tom}, <br/>
+  journal={arXiv preprint arXiv:1904.06963}, <br/>
+  year={2019} <br/>
+} <br/>
+	</div></div>
+	<div id="gc19tldr" class="hidden"><br/>
+At standard Gaussian initializations, we prove that increased layer width improves and increased network depth hurts trainability of neural networks. Orthogonal initializations make the early training dynamics independent of depth, but is applicable only for linear or tanh networks. Finally, we show that the combination of batch normalization and skip connections enable us to train very deep networks in practice.
+	</div>
+	<br/><br/>
+
+	<li>
+	<span class="title">Adversarial robustness through local linearization</span><br/> 
+	Chongli Qin, James Martens, Sven Gowal, Dilip Krishnan, Alhussein Fawzi, <b>Soham De</b>, Robert Stanforth, Pushmeet Kohli<br/>
+	NeurIPS 2019<br/>
+	<a href="https://arxiv.org/pdf/1907.02610.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('llr19bib');">bibtex</a> /
+	<a href="javascript:unhide('llr19tldr');">tl;dr</a>
+	<div id="llr19bib" class="hidden"><div class="bibstyle"><br/>
+@article{qin2019adversarial, <br/>
+  title={Adversarial Robustness through Local Linearization}, <br/>
+  author={Qin, Chongli and Martens, James and Gowal, Sven and Krishnan, Dilip and Fawzi, Alhussein and De, Soham and Stanforth, Robert and Kohli, Pushmeet}, <br/>
+  journal={arXiv preprint arXiv:1907.02610}, <br/>
+  year={2019} <br/>
+} <br/>
+	</div></div>
+	<div id="llr19tldr" class="hidden"><br/>
+Adversarial training is an effective but computationally costly method for training neural nets that are robust against adversarial perturbations. We introduce a regularizer that achieves state-of-the-art adversarial accuracy results on CIFAR-10 and ImageNet classifiers, while being significantly faster than adversarial training.
+	</div>
+	<br/><br/>
+
+	<li>
+	<span class="title">Training quantized nets: a deeper understanding</a></span><br/> 
+	Hao Li*, <b>Soham De*</b>, Zheng Xu, Christoph Studer, Hanan Samet, Tom Goldstein<br/>
+	NeurIPS 2017<br/>
+	<!-- Neural Information Processing Systems (NIPS) 2017<br/> -->
+	<a href="https://arxiv.org/pdf/1706.02379.pdf" target="_blank">paper</a> /
+	<a href="docs/nips17_poster.pdf" target="_blank">poster</a> /
+	<a href="javascript:unhide('nips17bib');">bibtex</a> /
+	<a href="javascript:unhide('nips17tldr');">tl;dr</a>
+	<div id="nips17bib" class="hidden"><div class="bibstyle"><br/>
+@inproceedings{li2017training, <br/>
+  title={Training quantized nets: A deeper understanding}, <br/>
+  author={Li, Hao and De, Soham and Xu, Zheng and Studer, Christoph and Samet, Hanan and Goldstein, Tom}, <br/>
+  booktitle={Advances in Neural Information Processing Systems}, <br/>
+  pages={5811--5821}, <br/>
+  year={2017} <br/>
+} <br/>
+	</div></div>
+	<div id="nips17tldr" class="hidden"><br/>
+Neural net parameters can often be compressed down to just one single bit without a significant loss in network performance, yielding a huge reduction in model size and computational workload. We develop a theory of quantized nets, and explain the performance of algorithms for weight quantization.
+	</div>
+	<br/><br/>
+
+	<li>
+	<span class="title">Automated inference with adaptive batches</a></span><br/> 
+	<b>Soham De</b>, Abhay Yadav, David Jacobs, Tom Goldstein<br/>
+	AISTATS 2017<br/>
+	<a href="docs/aistats17_paper.pdf" target="_blank">paper</a> /
+	<a href="docs/aistats17_slides.pdf" target="_blank">slides</a> /
+	<a href="javascript:unhide('aistats17bib');">bibtex</a> /
+	<a href="javascript:unhide('aistats17tldr');">tl;dr</a>
+	<div id="aistats17bib" class="hidden"><div class="bibstyle"><br/>
+@inproceedings{de2017automated, <br/>
+  title={Automated inference with adaptive batches}, <br/>
+  author={De, Soham and Yadav, Abhay and Jacobs, David and Goldstein, Tom}, <br/>
+  booktitle={Artificial Intelligence and Statistics}, <br/>
+  pages={1504--1513}, <br/>
+  year={2017} <br/>
+} <br/>
+	</div></div>
+	<div id="aistats17tldr" class="hidden"><br/>
+We propose Big Batch SGD for automatically growing batch sizes by controlling the signal-to-noise ratio during SGD training. We show that increasing the batch size during training can generalize as well as small batches on neural networks, and allows for SGD to be fully automated using adaptive step size methods.
+	</div>
+	<br/><br/>
+
+	<li>
+	<span class="title">The inevitability of ethnocentrism revisited: ethnocentrism diminishes as mobility increases</span><br/> 
+	<b>Soham De</b>, Michele Gelfand, Dana Nau, Patrick Roos<br/>
+	Scientific Reports 2015<br/>
+	<a href="http://www.nature.com/articles/srep17963" target="_blank">paper</a> /
+	<a href="https://cmns.umd.edu/news-events/features/3350" target="_blank">press</a> /
+	<a href="javascript:unhide('scirep15bib');">bibtex</a> /
+	<a href="javascript:unhide('scirep15tldr');">tl;dr</a>
+	<div id="scirep15bib" class="hidden"><div class="bibstyle"><br/>
+@article{de2015inevitability, <br/>
+  title={The inevitability of ethnocentrism revisited: Ethnocentrism diminishes as mobility increases}, <br/>
+  author={De, Soham and Gelfand, Michele J and Nau, Dana and Roos, Patrick}, <br/>
+  journal={Scientific reports}, <br/>
+  volume={5}, <br/>
+  pages={17963}, <br/>
+  year={2015}, <br/>
+  publisher={Nature Publishing Group} <br/>
+} <br/>
+	</div></div>
+	<div id="scirep15tldr" class="hidden"><br/>
+Advances over the centuries have greatly increased the degree to which humans change physical locations. Using an evolutionary game theoretical model and archival data, we show that in highly mobile societies, one’s choice of action is more likely to depend on what individual one is interacting with, rather than the group to which the individual belongs.
+	</div>
+	<br/><br/>
+</ul>
+
+<!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
 <tbody>
 
 	
@@ -151,7 +287,6 @@ Adversarial training is an effective but computationally costly method for train
 	<span class="title">Training Quantized Nets: A Deeper Understanding</a></span><br/> 
 	Hao Li*, <b>Soham De*</b>, Zheng Xu, Christoph Studer, Hanan Samet, Tom Goldstein<br/>
 	NIPS 2017<br/>
-	<!-- Neural Information Processing Systems (NIPS) 2017<br/> -->
 	<a href="https://arxiv.org/pdf/1706.02379.pdf" target="_blank">paper</a> /
 	<a href="docs/nips17_poster.pdf" target="_blank">poster</a> /
 	<a href="javascript:unhide('nips17bib');">bibtex</a> /
@@ -232,7 +367,7 @@ Human societies around the world interact with each other by developing and main
 </tr>
 
 
-<!-- <tr>
+<tr>
 	<td width="20%" valign="top">
 	<img class="pubimage" src="./pubimages/distributed.png">
 	</td>
@@ -259,7 +394,7 @@ We propose an optimization algorithm called CentralVR that reduces the variance 
 	</div>
 	<br/><br/>
 	</td>
-</tr> -->
+</tr>
 
 
 <tr>
@@ -293,10 +428,10 @@ Advances over the centuries have greatly increased the degree to which humans ch
 </tr>
 
 </tbody>
-</table>
+</table> -->
 
 <hr/>
-Last Updated: March 6, 2020
+Last Updated: June 2, 2020
 
 </body>
 </html>
