--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@ London, UK<br/><br/>
 <b>Contact Address:</b><br/>
 R7, 14-18 Handyside St,</br>
 London, UK, N1C 4DN<br/><br/>
-<a target="_blank" href="mailto: sohamde.ml@gmail.com">Email</a> / <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=lHf55pF3KVQC&view_op=list_works">Scholar</a> / <a target="_blank" href="cv.pdf">CV</a><br/>
+<a target="_blank" href="mailto: sohamde.ml@gmail.com">Email</a> / <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=lHf55pF3KVQC&view_op=list_works">Scholar</a> / <a target="_blank" href="https://twitter.com/sohamde_">Twitter</a> / <a target="_blank" href="https://www.linkedin.com/in/soham-de-85b1b073/">LinkedIn</a>
+<!--<a target="_blank" href="cv.pdf">CV</a><br/>-->
 
 <br/><br/>
-I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I am currently working on the analysis and understanding of deep neural networks. I completed my PhD in 2018 at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>. During my PhD, I studied fast stochastic optimization algorithms for machine learning problems. I also worked on game-theoretic models of human behavior collaborating with <a href="https://www.michelegelfand.com/" target="_blank">Michele Gelfand</a>. I completed my undergraduate degree from <a href="http://www.jaduniv.edu.in/" target="_blank">Jadavpur University</a>, Kolkata, India in 2013.
-
-<!-- I have previously interned at the <a href="https://www.ttic.edu/" target="_blank">Toyota Technological Institute at Chicago (TTIC)</a> and <a href="http://research.ibm.com/labs/almaden/" target="_blank">IBM Research Almaden</a>. -->
+I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I work on understanding of deep neural networks. I completed my PhD in 2018 at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>. During my PhD, I studied fast stochastic optimization algorithms for machine learning problems. I also worked on game-theoretic models of human behavior collaborating with <a href="https://www.michelegelfand.com/" target="_blank">Michele Gelfand</a>. I completed my undergraduate degree from <a href="http://www.jaduniv.edu.in/" target="_blank">Jadavpur University</a>, Kolkata, India in 2013. I have previously interned at <a href="https://www.ttic.edu/" target="_blank">Toyota Technological Institute at Chicago (TTIC)</a>, <a href="http://research.ibm.com/labs/almaden/" target="_blank">IBM Research Almaden</a> and <a href="https://deepmind.com/" target="_blank">DeepMind</a>.
 
 <br/><br/>
 <h3>SELECTED PAPERS</h3>
