--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ London, UK<br/><br/>
 <b>Contact Address:</b><br/>
 R7, 14-18 Handyside St,</br>
 London, UK, N1C 4DN<br/><br/>
-<a target="_blank" href="mailto: sohamde.ml@gmail.com">Email</a> / <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=lHf55pF3KVQC&view_op=list_works">Scholar</a> / <a target="_blank" href="https://twitter.com/sohamde_">Twitter</a> / <a target="_blank" href="https://www.linkedin.com/in/soham-de-85b1b073/">LinkedIn</a>
+<a target="_blank" href="mailto: sohamde.ml@gmail.com">Email</a> / <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=lHf55pF3KVQC&view_op=list_works">Scholar</a> / <a target="_blank" href="https://twitter.com/sohamde_">Twitter</a>
 <!--<a target="_blank" href="cv.pdf">CV</a><br/>-->
 
 <br/><br/>
