--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 
 <ul>
 	<li>
-	<span class="title">Batch normalization biases deep residual networks towards shallow paths</span><br/> 
+	<span class="title">Batch normalization biases residual blocks towards the identity function in deep networks</span><br/> 
 	<b>Soham De</b>, Sam Smith<br/>
 	Preprint<br/>
 	<a href="https://arxiv.org/pdf/2002.10444.pdf" target="_blank">paper</a> /
@@ -74,7 +74,7 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 } <br/>
 	</div></div>
 	<div id="bn20tldr" class="hidden"><br/>
-We show that batch normalization biases deep residual networks towards shallow paths with well-behaved gradients. This dramatically increases the largest trainable depth. We can recover this benefit with a simple change to the initialization scheme.
+We show that batch normalization biases residual blocks in deep networks to compute the identity function early in training. This dramatically increases the largest trainable depth. We can recover this benefit with a simple change to the initialization scheme.
 	</div>
 	<br/><br/>
 
