--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 	<a href="javascript:unhide('bn20tldr');">tl;dr</a>
 	<div id="bn20bib" class="hidden"><div class="bibstyle"><br/>
 @article{de2020batch, <br/>
-  title={Batch Normalization Biases Deep Residual Networks Towards Shallow Paths}, <br/>
+  title={Batch Normalization Biases Residual Blocks Towards the Identity Function in Deep Networks}, <br/>
   author={De, Soham and Smith, Samuel L}, <br/>
   journal={arXiv preprint arXiv:2002.10444}, <br/>
   year={2020} <br/>
-} <br/>
+} <br/>		
 	</div></div>
 	<div id="bn20tldr" class="hidden"><br/>
 We show that batch normalization biases residual blocks in deep networks to compute the identity function early in training. This dramatically increases the largest trainable depth. We can recover this benefit with a simple change to the initialization scheme.
