--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 	<li>
 	<span class="title">Batch normalization biases residual blocks towards the identity function in deep networks</span><br/> 
 	<b>Soham De</b>, Sam Smith<br/>
-	Preprint<br/>
+	NeurIPS 2020<br/>
 	<a href="https://arxiv.org/pdf/2002.10444.pdf" target="_blank">paper</a> /
 	<a href="javascript:unhide('bn20bib');">bibtex</a> /
 	<a href="javascript:unhide('bn20tldr');">tl;dr</a>
@@ -82,7 +82,20 @@ We show that batch normalization biases residual blocks in deep networks to comp
 	<span class="title">On the generalization benefit of noise in stochastic gradient descent</span><br/> 
 	Samuel L Smith, Erich Elsen, <b>Soham De</b><br/>
 	ICML 2020<br/>
-	paper coming soon
+	<a href="https://arxiv.org/pdf/2006.15081.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('sgdgen20bib');">bibtex</a> /
+	<a href="javascript:unhide('sgdgen20tldr');">tl;dr</a>
+	<div id="sgdgen20bib" class="hidden"><div class="bibstyle"><br/>
+@article{smith2020generalization, <br/>
+  title={On the generalization benefit of noise in stochastic gradient descent}, <br/>
+  author={Smith, Samuel L and Elsen, Erich and De, Soham}, <br/>
+  journal={arXiv preprint arXiv:2006.15081}, <br/>
+  year={2020} <br/>
+} <br/>
+	</div></div>
+	<div id="sgdgen20tldr" class="hidden"><br/>
+While it has long been argued that minibatch SGD can generalize better than large batch gradient descent in neural networks, recent papers have questioned this claim. Through carefully designed experiments and rigorous hyperparameter sweeps, we verify that SGD with small batch sizes can outperform large batches on the test set.
+	</div>
 	<br/><br/>
 
 	<li>
