--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@ London, UK, N1C 4DN<br/><br/>
 <!--<a target="_blank" href="cv.pdf">CV</a><br/>-->
 
 <br/><br/>
-I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I work on understanding neural networks. I completed my PhD in 2018 at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>. During my PhD, I studied fast stochastic optimization algorithms for machine learning problems. I also worked on game-theoretic models of human behavior collaborating with <a href="https://www.michelegelfand.com/" target="_blank">Michele Gelfand</a>. I completed my undergraduate degree from <a href="http://www.jaduniv.edu.in/" target="_blank">Jadavpur University</a>, Kolkata, India in 2013. I have previously interned at <a href="https://www.ttic.edu/" target="_blank">Toyota Technological Institute at Chicago (TTIC)</a>, <a href="http://research.ibm.com/labs/almaden/" target="_blank">IBM Research Almaden</a> and <a href="https://deepmind.com/" target="_blank">DeepMind</a>.
+I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I work on understanding neural networks.
+	I completed my PhD in 2018 at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>.
+	During my PhD, I worked on fast stochastic optimization algorithms for machine learning problems.
+	I also worked on game-theoretic models of the evolution of human behavioral norms collaborating with <a href="https://www.michelegelfand.com/" target="_blank">Michele Gelfand</a>.
+	I completed my undergraduate degree from <a href="http://www.jaduniv.edu.in/" target="_blank">Jadavpur University</a>, Kolkata, India in 2013.
+	I have previously interned at <a href="https://www.ttic.edu/" target="_blank">Toyota Technological Institute at Chicago (TTIC)</a>, <a href="http://research.ibm.com/labs/almaden/" target="_blank">IBM Research Almaden</a> and <a href="https://deepmind.com/" target="_blank">DeepMind</a>.
 
 <br/><br/>
 <h3>SELECTED PAPERS</h3>
@@ -58,6 +63,66 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 <br/><br/>
 
 <ul>
+	<li>
+	<span class="title">High-performance large-scale image recognition without normalization</span><br/> 
+	Andrew Brock, <b>Soham De</b>, Sam Smith, Karen Simonyan<br/>
+	Preprint<br/>
+	<a href="https://arxiv.org/pdf/2102.06171.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('nfnet21bib');">bibtex</a> /
+	<a href="javascript:unhide('nfnet21tldr');">tl;dr</a>
+	<div id="nfnet21bib" class="hidden"><div class="bibstyle"><br/>
+@article{brock2021high, <br/>
+  title={High-Performance Large-Scale Image Recognition Without Normalization}, <br/>
+  author={Brock, Andrew and De, Soham and Smith, Samuel L and Simonyan, Karen}, <br/>
+  journal={arXiv preprint arXiv:2102.06171}, <br/>
+  year={2021} <br/>
+} <br/>
+	</div></div>
+	<div id="nfnet21tldr" class="hidden"><br/>
+We propose signal propagation plots (SPPs) to characterize signal propagation on the forward pass in deep networks. Using SPPs, we show that a key benefit of BatchNorm is that it corrects for a mean-shift in the hidden activations that can arise with ReLU activations. We propose a modified version of Weight Standardization that can correct for this, and train normalizer-free ResNets to high accuracies.
+	</div>
+	<br/><br/>
+		
+	<li>
+	<span class="title">On the origin of implicit regularization in Stochastic Gradient Descent</span><br/> 
+	Sam Smith, Benoit Dherin, David Barrett, <b>Soham De</b><br/>
+	ICLR 2021<br/>
+	<a href="https://arxiv.org/pdf/2101.12176.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('beasgd21bib');">bibtex</a> /
+	<a href="javascript:unhide('beasgd21tldr');">tl;dr</a>
+	<div id="beasgd21bib" class="hidden"><div class="bibstyle"><br/>
+@inproceedings{smith2021origin, <br/>
+  title={On the Origin of Implicit Regularization in Stochastic Gradient Descent}, <br/>
+  author={Smith, Samuel L and Dherin, Benoit and Barrett, David GT and De, Soham}, <br/>
+  booktitle={9th International Conference on Learning Representations, {ICLR}}, <br/>
+  year={2021} <br/>
+} <br/>
+	</div></div>
+	<div id="beasgd21tldr" class="hidden"><br/>
+We propose signal propagation plots (SPPs) to characterize signal propagation on the forward pass in deep networks. Using SPPs, we show that a key benefit of BatchNorm is that it corrects for a mean-shift in the hidden activations that can arise with ReLU activations. We propose a modified version of Weight Standardization that can correct for this, and train normalizer-free ResNets to high accuracies.
+	</div>
+	<br/><br/>
+	
+	<li>
+	<span class="title">Characterizing signal propagation to close the performance gap in unnormalized ResNets</span><br/> 
+	Andrew Brock, <b>Soham De</b>, Sam Smith<br/>
+	ICLR 2021<br/>
+	<a href="https://arxiv.org/pdf/2101.08692.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('nfresnet21bib');">bibtex</a> /
+	<a href="javascript:unhide('nfresnet21tldr');">tl;dr</a>
+	<div id="nfresnet21bib" class="hidden"><div class="bibstyle"><br/>
+@inproceedings{brock2021characterizing, <br/>
+  title={Characterizing signal propagation to close the performance gap in unnormalized ResNets}, <br/>
+  author={Brock, Andrew and De, Soham and Smith, Samuel L}, <br/>
+  booktitle={9th International Conference on Learning Representations, {ICLR}}, <br/>
+  year={2021} <br/>
+} <br/>
+	</div></div>
+	<div id="nfresnet21tldr" class="hidden"><br/>
+We propose signal propagation plots (SPPs) to characterize signal propagation on the forward pass in deep networks. Using SPPs, we show that a key benefit of BatchNorm is that it corrects for a mean-shift in the hidden activations that can arise with ReLU activations. We propose a modified version of Weight Standardization that can correct for this, and train normalizer-free ResNets to high accuracies.
+	</div>
+	<br/><br/>
+	
 	<li>
 	<span class="title">Batch normalization biases residual blocks towards the identity function in deep networks</span><br/> 
 	<b>Soham De</b>, Sam Smith<br/>
@@ -67,14 +132,15 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 	<a href="javascript:unhide('bn20tldr');">tl;dr</a>
 	<div id="bn20bib" class="hidden"><div class="bibstyle"><br/>
 @article{de2020batch, <br/>
-  title={Batch Normalization Biases Residual Blocks Towards the Identity Function in Deep Networks}, <br/>
-  author={De, Soham and Smith, Samuel L}, <br/>
-  journal={arXiv preprint arXiv:2002.10444}, <br/>
+  title={Batch normalization biases residual blocks towards the identity function in deep networks}, <br/>
+  author={De, Soham and Smith, Sam}, <br/>
+  journal={Advances in Neural Information Processing Systems}, <br/>
+  volume={33}, <br/>
   year={2020} <br/>
-} <br/>		
+} <br/>
 	</div></div>
 	<div id="bn20tldr" class="hidden"><br/>
-We show that batch normalization biases residual blocks in deep networks to compute the identity function early in training. This dramatically increases the largest trainable depth. We can recover this benefit with a simple change to the initialization scheme.
+We show that batch normalization biases residual blocks towards the identity function in deep networks early in training. This dramatically increases the largest trainable depth. We can recover this benefit with a simple change to the initialization scheme.
 	</div>
 	<br/><br/>
 
@@ -118,7 +184,7 @@ At standard Gaussian initializations, we prove that increased layer width improv
 	</div>
 	<br/><br/>
 
-	<li>
+<!-- 	<li>
 	<span class="title">Adversarial robustness through local linearization</span><br/> 
 	Chongli Qin, James Martens, Sven Gowal, Dilip Krishnan, Alhussein Fawzi, <b>Soham De</b>, Robert Stanforth, Pushmeet Kohli<br/>
 	NeurIPS 2019<br/>
@@ -136,7 +202,7 @@ At standard Gaussian initializations, we prove that increased layer width improv
 	<div id="llr19tldr" class="hidden"><br/>
 Adversarial training is an effective but computationally costly method for training neural nets that are robust against adversarial perturbations. We introduce a regularizer that achieves state-of-the-art adversarial accuracy results on CIFAR-10 and ImageNet classifiers, while being significantly faster than adversarial training.
 	</div>
-	<br/><br/>
+	<br/><br/> -->
 
 	<li>
 	<span class="title">Training quantized nets: a deeper understanding</a></span><br/> 
@@ -183,7 +249,7 @@ We propose Big Batch SGD for automatically growing batch sizes by controlling th
 	</div>
 	<br/><br/>
 
-	<li>
+<!-- 	<li>
 	<span class="title">The inevitability of ethnocentrism revisited: ethnocentrism diminishes as mobility increases</span><br/> 
 	<b>Soham De</b>, Michele Gelfand, Dana Nau, Patrick Roos<br/>
 	Scientific Reports 2015<br/>
@@ -205,7 +271,7 @@ We propose Big Batch SGD for automatically growing batch sizes by controlling th
 	<div id="scirep15tldr" class="hidden"><br/>
 Advances over the centuries have greatly increased the degree to which humans change physical locations. Using an evolutionary game theoretical model and archival data, we show that in highly mobile societies, one’s choice of action is more likely to depend on what individual one is interacting with, rather than the group to which the individual belongs.
 	</div>
-	<br/><br/>
+	<br/><br/> -->
 </ul>
 
 <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
