--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 
 <ul>
 	<li>
-	<span class="title">High-performance large-scale image recognition without normalization</span><br/> 
+	<span class="title">High-Performance Large-Scale Image Recognition Without Normalization</span><br/> 
 	Andrew Brock, <b>Soham De</b>, Sam Smith, Karen Simonyan<br/>
 	Preprint<br/>
 	<a href="https://arxiv.org/pdf/2102.06171.pdf" target="_blank">paper</a> /
@@ -84,7 +84,7 @@ BatchNorm is a key component of most vision models, but it has many undesirable 
 	<br/><br/>
 		
 	<li>
-	<span class="title">On the origin of implicit regularization in Stochastic Gradient Descent</span><br/> 
+	<span class="title">On the Origin of Implicit Regularization in Stochastic Gradient Descent</span><br/> 
 	Sam Smith, Benoit Dherin, David Barrett, <b>Soham De</b><br/>
 	ICLR 2021<br/>
 	<a href="https://arxiv.org/pdf/2101.12176.pdf" target="_blank">paper</a> /
@@ -104,7 +104,7 @@ We show that, when using small finite learning rates, the path taken by Random S
 	<br/><br/>
 	
 	<li>
-	<span class="title">Characterizing signal propagation to close the performance gap in unnormalized ResNets</span><br/> 
+	<span class="title">Characterizing Signal Propagation to Close the Performance Gap in Unnormalized ResNets</span><br/> 
 	Andrew Brock, <b>Soham De</b>, Sam Smith<br/>
 	ICLR 2021<br/>
 	<a href="https://arxiv.org/pdf/2101.08692.pdf" target="_blank">paper</a> /
@@ -124,7 +124,7 @@ We propose signal propagation plots (SPPs) to characterize signal propagation on
 	<br/><br/>
 	
 	<li>
-	<span class="title">Batch normalization biases residual blocks towards the identity function in deep networks</span><br/> 
+	<span class="title">Batch Normalization Biases Residual Blocks Towards the Identity Function in Deep Networks</span><br/> 
 	<b>Soham De</b>, Sam Smith<br/>
 	NeurIPS 2020<br/>
 	<a href="https://arxiv.org/pdf/2002.10444.pdf" target="_blank">paper</a> /
@@ -145,7 +145,7 @@ We show that batch normalization biases residual blocks towards the identity fun
 	<br/><br/>
 
 	<li>
-	<span class="title">On the generalization benefit of noise in stochastic gradient descent</span><br/> 
+	<span class="title">On the Generalization Benefit of Noise in Stochastic Gradient Descent</span><br/> 
 	Samuel L Smith, Erich Elsen, <b>Soham De</b><br/>
 	ICML 2020<br/>
 	<a href="https://arxiv.org/pdf/2006.15081.pdf" target="_blank">paper</a> /
@@ -165,7 +165,7 @@ While it has long been argued that minibatch SGD can generalize better than larg
 	<br/><br/>
 
 	<li>
-	<span class="title">The impact of neural network overparameterization on gradient confusion and stochastic gradient descent</span><br/> 
+	<span class="title">The Impact of Neural Network Overparameterization on Gradient Confusion and Stochastic Gradient Descent</span><br/> 
 	Karthik A. Sankararaman*, <b>Soham De*</b>, Zheng Xu, W. Ronny Huang, Tom Goldstein<br/>
 	ICML 2020<br/>
 	<a href="https://arxiv.org/pdf/1904.06963.pdf" target="_blank">paper</a> /
@@ -205,7 +205,7 @@ Adversarial training is an effective but computationally costly method for train
 	<br/><br/> -->
 
 	<li>
-	<span class="title">Training quantized nets: a deeper understanding</a></span><br/> 
+	<span class="title">Training Quantized Nets: A Deeper Understanding</a></span><br/> 
 	Hao Li*, <b>Soham De*</b>, Zheng Xu, Christoph Studer, Hanan Samet, Tom Goldstein<br/>
 	NeurIPS 2017<br/>
 	<!-- Neural Information Processing Systems (NIPS) 2017<br/> -->
@@ -228,7 +228,7 @@ Neural net parameters can often be compressed down to just one single bit withou
 	<br/><br/>
 
 	<li>
-	<span class="title">Automated inference with adaptive batches</a></span><br/> 
+	<span class="title">Automated Inference with Adaptive Batches</a></span><br/> 
 	<b>Soham De</b>, Abhay Yadav, David Jacobs, Tom Goldstein<br/>
 	AISTATS 2017<br/>
 	<a href="docs/aistats17_paper.pdf" target="_blank">paper</a> /
