--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 	<li>
 	<span class="title">High-Performance Large-Scale Image Recognition Without Normalization</span><br/> 
 	Andrew Brock, <b>Soham De</b>, Sam Smith, Karen Simonyan<br/>
-	Preprint<br/>
+	ICML 2021<br/>
 	<a href="https://arxiv.org/pdf/2102.06171.pdf" target="_blank">paper</a> /
 	<a href="javascript:unhide('nfnet21bib');">bibtex</a> /
 	<a href="javascript:unhide('nfnet21tldr');">tl;dr</a>
@@ -509,7 +509,7 @@ Advances over the centuries have greatly increased the degree to which humans ch
 </table> -->
 
 <hr/>
-Last Updated: March 5, 2021
+Last Updated: October 6, 2021
 
 </body>
 </html>
