--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@ London, UK, N1C 4DN<br/><br/>
 <!--<a target="_blank" href="cv.pdf">CV</a><br/>-->
 
 <br/><br/>
-I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I work on understanding neural networks.
-	I completed my PhD in 2018 at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>.
-	During my PhD, I worked on fast stochastic optimization algorithms for machine learning problems.
-	I also worked on game-theoretic models of the evolution of human behavioral norms collaborating with <a href="https://www.michelegelfand.com/" target="_blank">Michele Gelfand</a>.
-	I completed my undergraduate degree from <a href="http://www.jaduniv.edu.in/" target="_blank">Jadavpur University</a>, Kolkata, India in 2013.
-	I have previously interned at <a href="https://www.ttic.edu/" target="_blank">Toyota Technological Institute at Chicago (TTIC)</a>, <a href="http://research.ibm.com/labs/almaden/" target="_blank">IBM Research Almaden</a> and <a href="https://deepmind.com/" target="_blank">DeepMind</a>.
+I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I work on in better understanding and improving large-scale deep learning.
+I currently focus on topics in optimization and initialization, and more recently have been working on privacy-preserving machine learning.
+<br/><br/>
+	
+I completed my PhD in 2018 at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>.
+During my PhD, I worked on fast stochastic optimization algorithms for machine learning problems.
+I also worked on game-theoretic models of the evolution of human behavioral norms collaborating with <a href="https://www.michelegelfand.com/" target="_blank">Michele Gelfand</a>.
+I completed my undergraduate degree from <a href="http://www.jaduniv.edu.in/" target="_blank">Jadavpur University</a>, Kolkata, India in 2013.
+I have previously interned at <a href="https://www.ttic.edu/" target="_blank">Toyota Technological Institute at Chicago (TTIC)</a>, <a href="http://research.ibm.com/labs/almaden/" target="_blank">IBM Research Almaden</a> and <a href="https://deepmind.com/" target="_blank">DeepMind</a>.
 
 <br/><br/>
 <h3>SELECTED PAPERS</h3>
