--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 	Andrew Brock, <b>Soham De</b>, Sam Smith, Karen Simonyan<br/>
 	ICML 2021<br/>
 	<a href="https://arxiv.org/pdf/2102.06171.pdf" target="_blank">paper</a> /
+	<a href="https://github.com/deepmind/deepmind-research/tree/master/nfnets" target="_blank">code</a> /
 	<a href="javascript:unhide('nfnet21bib');">bibtex</a> /
 	<a href="javascript:unhide('nfnet21tldr');">tl;dr</a>
 	<div id="nfnet21bib" class="hidden"><div class="bibstyle"><br/>
