--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 
 <ul>
 	<li>
+	<span class="title">Unlocking High-Accuracy Differentially Private Image Classification through Scale</span><br/> 
+	<b>Soham De</b>, Leonard Berrada, Jamie Hayes, Samuel L Smith, Borja Balle<br/>
+	Preprint<br/>
+	<a href="https://arxiv.org/pdf/2204.13650.pdf" target="_blank">paper</a> /
+	<a href="https://github.com/deepmind/jax_privacy" target="_blank">code</a> /
+	<a href="javascript:unhide('dpsgd22bib');">bibtex</a> /
+	<a href="javascript:unhide('dpsgd22tldr');">tl;dr</a>
+	<div id="dpsgd22bib" class="hidden"><div class="bibstyle"><br/>
+@article{de2022unlocking, <br/>
+  title={Unlocking high-accuracy differentially private image classification through scale}, <br/>
+  author={De, Soham and Berrada, Leonard and Hayes, Jamie and Smith, Samuel L and Balle, Borja}, <br/>
+  journal={arXiv preprint arXiv:2204.13650}, <br/>
+  year={2022} <br/>
+} <br/>
+	</div></div>
+	<div id="dpsgd22tldr" class="hidden"><br/>
+Machine learning models that were trained under standard training pipelines can leak the data it was trained on. This presents privacy risks when the training data contains sensitive information. Differential privacy is a technology that can be deployed at training time to mitigate these privacy risks, but unfortunately they often incur significant reduction in model performance. In this work, we make substantial progress towards unlocking high-accuracy training of image classification models under differential privacy.
+	</div>
+	<br/><br/>
+	
+	<li>
 	<span class="title">High-Performance Large-Scale Image Recognition Without Normalization</span><br/> 
 	Andrew Brock, <b>Soham De</b>, Sam Smith, Karen Simonyan<br/>
 	ICML 2021<br/>
