--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 } <br/>
 	</div></div>
 	<div id="dpsgd22tldr" class="hidden"><br/>
-Machine learning models that were trained under standard training pipelines can leak the data it was trained on. This presents privacy risks when the training data contains sensitive information. Differential privacy is a technology that can be deployed at training time to mitigate these privacy risks, but unfortunately they often incur significant reduction in model performance. In this work, we make substantial progress towards unlocking high-accuracy training of image classification models under differential privacy.
+Machine learning models that were trained under standard training pipelines can leak the data it was trained on. This presents privacy risks when the training data contains sensitive information. Differential privacy is a technology that can be deployed at training time to mitigate these privacy risks, but they often incur significant reduction in model performance. In this work, we make substantial progress towards unlocking high-accuracy training of image classification models under differential privacy.
 	</div>
 	<br/><br/>
 	
